Adding CNAME file and starter text from previous project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Billy Mathison | Nashville-Based Full-Stack Developer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Billy Mathison</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -39,10 +39,16 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#">Resume</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#">Technology</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -65,9 +71,21 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">About</h2>
+          <p class="text-white-50">I am a problem solver.
+            <br><br>
+            I spent 16 years working in mental health, helping others solve their problems. Eventually I came to the
+            realization that while I loved helping clients through their problems, ultimately I had no control over the
+            final outcome.
+            <br><br>
+            What I love most about being a software developer is that I have the ability to solve any problem. I still
+            have the satisfaction of breaking something apart and trying to understand what the issue is. Now, I also
+            get to solve that problem. There is something so incredibly satisfying about not only being able to
+            understand the problem, but being able to create a solution and implement it.
+            <br><br>
+            Software development has allowed me to expand upon a part of my previous career that I enjoyed most
+            while
+            also providing the ability to directly solve a problem.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
