Adding logo to title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>Billy Mathison | Nashville-Based Full-Stack Developer</title>
+  <link rel="icon" href="img/BM Logo.png" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
