Adding tech icons, profile image, project images, and styling

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="css/grayscale.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +32,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Billy Mathison</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -46,10 +50,10 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#">Technology</a>
+            <a class="nav-link js-scroll-trigger" href="#technologies">Technologies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -59,10 +63,12 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
+      <div>
+        <img class="profile-picture" src="img/profile-picture.jpg" alt="Profile Picture">
+      </div>
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <h1 class="mx-auto my-0">Billy Mathison</h1>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Full-Stack Software Developer</h2>
       </div>
     </div>
   </header>
@@ -89,38 +95,30 @@
             also providing the ability to directly solve a problem.</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
     </div>
   </section>
 
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
-
-      <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
-        </div>
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-          </div>
-        </div>
-      </div>
+      <h2 class="text-center mb-5">Projects</h2>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/Dram - Profile.PNG" alt="Dram application">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Dram</h4>
+                <p class="mb-0 text-white-50">For my front-end capstone at Nashville Software School I created Dram.
+                  Dram is a single page whiskey tasting application which allows users to participate in live whiskey
+                  tastings, view and share their reviews instantly, and provide searchable historical data. I built the
+                  application using React and used reactstrap for styling. Dram was tested at a live whiskey tasting in
+                  which 10 people utilized the application to participate in a blind tasting while saving their ratings
+                  and reviews.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -131,14 +129,21 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="img/Nutshell-laptop.png" alt="Nutshell application">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Nutshell</h4>
+                <p class="mb-0 text-white-50">I built a project with 4 teammates that was a social media platform called
+                  Nutshell. This was our third group project at Nashville Software School and we used HTML, CSS,
+                  Javascript, CRUD functionality, API fetch calls, Flexbox, Visual Studio Code, Git, Github,
+                  http-server, json-server, Bootstrap, Grunt, and Browserify to build the website.
+
+                  During this project I learned to use more GitHub features including creating, reading, and completing
+                  issues, and card flow in the project session. I also gained experience using Browserify and Bootstrap
+                  in building a website.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -149,86 +154,100 @@
     </div>
   </section>
 
-  <!-- Signup Section -->
-  <section id="signup" class="signup-section">
+
+  <!-- Technologies Section -->
+  <section id="technologies" class="tech-section text-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-
-          <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-          </form>
+        <div class="col-lg-10 mx-auto">
+          <h2 class="mb-4">Technologies</h2>
+          <div>
+            <img src="img/HTML.png" alt="HTML 5" title="HTML 5" />
+            <img src="img/CSS.png" alt="CSS" title="CSS" />
+            <img src="img/Javascript.png" alt="Javascript" title="Javascript" />
+            <img src="img/React.png" alt="React" title="React" />
+            <img src="img/CSharp.png" alt="C Sharp" title="C#" />
+            <img src="img/DOTNET CORE.png" alt="DotNet Core" title=".Net Core" />
+            <img src="img/SQL Server.png" alt="SQLServer" title="SQLServer" />
+            <img src="img/Bootstrap.png" alt="Bootsrap" title="Bootsrap" />
+            <img src="img/Azure Data Studio.jpg" alt="Azure Data Studio" title="Azure Data Studio" />
+            <img src="img/git.png" alt="Git" title="Git" />
+            <img src="img/Github.png" alt="Github" title="Github" />
+            <img src="img/Grunt.png" alt="Grunt" title="Grunt" />
+            <img src="img/Browserify.png" alt="Browserify" title="Browserify" />
+            <img src="img/JSON.png" alt="JSON" title="JSON" />
+            <img src="img/NPM.png" alt="Node Package Manager" title="Node Package Manager" />
+            <img src="img/Postman.png" alt="Postman" title="Postman" />
+            <img src="img/Reactstrap-Alt.png" alt="Reactstrap" title="Reactstrap" />
+            <img src="img/Visual Studio Code.png" alt="Visual Studio Code" title="Visual Studio Code" />
+            <img src="img/Visual Studio.png" alt="Visual Studio" title="Visual Studio" />
+          </div>
 
         </div>
-      </div>
-    </div>
   </section>
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-black">
     <div class="container">
+      <h2 class="text-center text-white mb-5">Contact</h2>
 
       <div class="row">
 
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-3 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="mailto:wlmathison.com">wlmathison@gmail.com</a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-3 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50"><a href="tel:16159868257">(615) 986-8257</a></div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+        <div class="col-md-3 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fab fa-linkedin text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">LinkedIn</h4>
+              <hr class="my-4">
+              <div class="small text-black-50"><a href="https://www.linkedin.com/in/billy-mathison/"
+                  target="_blank">linkedin.com/in/billy-mathison/</a></div>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-md-3 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <a href="https://github.com/megcruzen" target="_blank"><i class="fab fa-github text-primary mb-2"></i></a>
+              <h4 class="text-uppercase m-0">GitHub</h4>
+              <hr class="my-4">
+              <div class="small text-black-50"><a href="https://github.com/wlmathison"
+                  target="_blank">github.com/wlmathison</a></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
     </div>
   </footer>
 
