Modifying styling to projects. Adding resume section and linking to navbar.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -63,10 +63,9 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
-      <div>
-        <img class="profile-picture" src="img/profile-picture.jpg" alt="Profile Picture">
-      </div>
+
       <div class="mx-auto text-center">
+        <img class="profile-picture" src="img/profile-picture.jpg" alt="Profile Picture">
         <h1 class="mx-auto my-0">Billy Mathison</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Full-Stack Software Developer</h2>
       </div>
@@ -98,6 +97,13 @@
     </div>
   </section>
 
+  <!-- Resume Section -->
+  <section id="resume" class="projects-section bg-light">
+    <div class="container">
+      <h2 class="text-center mb-5">Resume</h2>
+    </div>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
@@ -106,10 +112,12 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Dram - Profile.PNG" alt="Dram application">
+          <div class="text-center h-100 project">
+            <img class="img-fluid" src="img/Dram - Profile.PNG" alt="Dram application">
+          </div>
         </div>
         <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
+          <div class="bg-black text-center h-100 screenshot project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Dram</h4>
@@ -119,6 +127,9 @@
                   application using React and used reactstrap for styling. Dram was tested at a live whiskey tasting in
                   which 10 people utilized the application to participate in a blind tasting while saving their ratings
                   and reviews.</p>
+                <br>
+                <a href="https://github.com/wlmathison/dram" target="_blank"><i class="fab fa-github"></i> View on
+                  GitHub</a>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -129,7 +140,9 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Nutshell-laptop.png" alt="Nutshell application">
+          <div class="text-center h-100 screenshot project">
+            <img class="img-fluid" src="img/Nutshell-laptop.png" alt="Nutshell application">
+          </div>
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -139,11 +152,13 @@
                 <p class="mb-0 text-white-50">I built a project with 4 teammates that was a social media platform called
                   Nutshell. This was our third group project at Nashville Software School and we used HTML, CSS,
                   Javascript, CRUD functionality, API fetch calls, Flexbox, Visual Studio Code, Git, Github,
-                  http-server, json-server, Bootstrap, Grunt, and Browserify to build the website.
-
-                  During this project I learned to use more GitHub features including creating, reading, and completing
-                  issues, and card flow in the project session. I also gained experience using Browserify and Bootstrap
-                  in building a website.</p>
+                  http-server, json-server, Bootstrap,Grunt, and Browserify to build the website. During this project I
+                  learned to use more GitHub features including creating, reading, and completing issues, and card flow
+                  in the project session. I also gained experience using Browserify and Bootstrap in building a website.
+                </p>
+                <br>
+                <a href="https://github.com/wlmathison/nutshell" target="_blank"><i class="fab fa-github"></i> View on
+                  GitHub</a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
