Adding imaged, resume information, and styling to page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="mx-auto text-center">
         <img class="profile-picture" src="img/profile-picture.jpg" alt="Profile Picture">
         <h1 class="mx-auto my-0">Billy Mathison</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Full-Stack Software Developer</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-6">Full-Stack Software Developer</h2>
       </div>
     </div>
   </header>
@@ -101,6 +101,171 @@
   <section id="resume" class="projects-section bg-light">
     <div class="container">
       <h2 class="text-center mb-5">Resume</h2>
+      <div class="text-center mb-5">
+        <a href="img/Billy_Mathison_Resume.pdf" class="btn btn-primary" download>Download</a>
+      </div>
+
+      <div class="work-experience">
+        <h4>Work Experience</h4>
+        <div class="resume-item">
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-job">FULL-STACK SOFTWARE DEVELOPER</div>
+            <div class="resume-year">2019</div>
+          </div>
+          <div class="resume-employer">Nashville Software School</div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li>Source code version control with Git/GitHub</li>
+                <li>Project management/tracking with Github Projects & Issue Tracking</li>
+                <li>JavaScript fundamentals leveraging DRY, modular, readable code and reusable components</li>
+                <li>Built single-page applications with HTML, CSS, and JavaScript libraries including React</li>
+                <li>Task Automation with Grunt: Linting with ESLint</li>
+                <li>Module bundling with Browserify</li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul>
+                <li>Styled applications with CSS Frameworks Bootstrap and Reactstrap</li>
+                <li>Application design through white boarding dependencies and building ERD’s</li>
+                <li>Executed projects in an Agile environment, including ticketing, testing, daily stand-ups,
+                  pair-programming, and team retrospectives</li>
+                <li>Used C#/ASP.Net to develop a full-stack MVC web application with a RESTful API that enables users
+                  CRUD functionality for resources in a SQL database</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="resume-item">
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-job">OUTPATIENT THERAPIST</div>
+            <div class="resume-year">2017 - 2018</div>
+          </div>
+          <div class="resume-employer">Centerstone</div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li>Individual counseling</li>
+                <li>Group counseling for substance abuse</li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul>
+                <li>Conducted intake assessments</li>
+                <li>Participated in weekly team treatment meetings</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="resume-item">
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-job">PSYCHOLOGICAL ASSISTANT</div>
+            <div class="resume-year">2016 - 2017</div>
+          </div>
+          <div class="resume-employer">Kathryn Steele, Psy. D.</div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li>Administration and scoring of tests including: WAIS-IV, WMS-IV, DKEFS, MMPI-II RF, CVLT-II, MCMI-IV,
+                  RBANS Update</li>
+                <li>Technologies used included Kareo, Q-interactive, Q-global, E-fax</li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul>
+                <li>Wrote Psychological and Neuropsychological reports</li>
+                <li>Insurance coding and billing</li>
+                <li>Accounts Receivable</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="resume-item">
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-job">OFFICE MANAGER / BILLING SPECIALIST / COUNSELOR</div>
+            <div class="resume-year">2008 - 2017</div>
+          </div>
+          <div class="resume-employer">Roy Asta, MD</div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <p>(January 2010 – September 2017) Billing Specialist (Part-time)</p>
+              <ul>
+                <li>Medical billing and coding, patient billing, accounts receivable, account auditing, and
+                  credentialing</li>
+                <li>Technologies used included MS Word, Excel, and Therapist Helper</li>
+              </ul>
+              <br>
+              <p>(January 2010 – July 2015) Counselor (Part-time)</p>
+              <ul>
+                <li>Individual counseling</li>
+                <li>Intake of opiate dependent patients</li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <p>(April 2008 – January 2010) Office Manager (Full-time)</p>
+              <ul>
+                <li>Managed daily activities of office including reception, medical billing, coding, patient billing,
+                  accounts receivable, medical authorizations, prior authorization for medications, credentialing,
+                  scheduling, purchasing, networking, maintenance of machinery, IT, and filing</li>
+                <li>Technologies used included MS Word, Excel, and Therapist Helper</li>
+                <li>Counseled patients over the phone during crisis</li>
+                <li>Medical transcription</li>
+                <li>In-depth training of new employees</li>
+                <li>Placate and/or control hostile patients as necessary</li>
+                <li>Familiar with medications frequently prescribed in the clinic</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="resume-item">
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-job">COUNSELOR</div>
+          </div>
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-employer">Scales Nutrition and Wellness Center</div>
+            <div class="resume-year">2012 - 2016</div>
+          </div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li>Group counseling for eating disorders and substance abuse</li>
+              </ul>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-employer">Behavioral Health Group</div>
+            <div class="resume-year">2012 - 2014</div>
+          </div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li>Substance abuse individual counseling</li>
+                <li>Group counseling</li>
+              </ul>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-employer">Private Practice</div>
+            <div class="resume-year">2011 - 2015</div>
+          </div>
+          <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li>Individual counseling</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
     </div>
   </section>
 
@@ -152,7 +317,7 @@
                 <p class="mb-0 text-white-50">I built a project with 4 teammates that was a social media platform called
                   Nutshell. This was our third group project at Nashville Software School and we used HTML, CSS,
                   Javascript, CRUD functionality, API fetch calls, Flexbox, Visual Studio Code, Git, Github,
-                  http-server, json-server, Bootstrap,Grunt, and Browserify to build the website. During this project I
+                  http-server, json-server, Bootstrap, Grunt, and Browserify to build the website. During this project I
                   learned to use more GitHub features including creating, reading, and completing issues, and card flow
                   in the project session. I also gained experience using Browserify and Bootstrap in building a website.
                 </p>
@@ -184,21 +349,26 @@
             <img src="img/CSharp.png" alt="C Sharp" title="C#" />
             <img src="img/DOTNET CORE.png" alt="DotNet Core" title=".Net Core" />
             <img src="img/SQL Server.png" alt="SQLServer" title="SQLServer" />
+          </div>
+          <div>
+            <img src="img/Reactstrap-Alt.png" alt="Reactstrap" title="Reactstrap" />
             <img src="img/Bootstrap.png" alt="Bootsrap" title="Bootsrap" />
             <img src="img/Azure Data Studio.jpg" alt="Azure Data Studio" title="Azure Data Studio" />
             <img src="img/git.png" alt="Git" title="Git" />
             <img src="img/Github.png" alt="Github" title="Github" />
             <img src="img/Grunt.png" alt="Grunt" title="Grunt" />
-            <img src="img/Browserify.png" alt="Browserify" title="Browserify" />
             <img src="img/JSON.png" alt="JSON" title="JSON" />
+          </div>
+          <div>
             <img src="img/NPM.png" alt="Node Package Manager" title="Node Package Manager" />
             <img src="img/Postman.png" alt="Postman" title="Postman" />
-            <img src="img/Reactstrap-Alt.png" alt="Reactstrap" title="Reactstrap" />
+            <img src="img/Browserify.png" alt="Browserify" title="Browserify" />
             <img src="img/Visual Studio Code.png" alt="Visual Studio Code" title="Visual Studio Code" />
             <img src="img/Visual Studio.png" alt="Visual Studio" title="Visual Studio" />
           </div>
-
         </div>
+
+      </div>
   </section>
 
   <!-- Contact Section -->
@@ -247,7 +417,7 @@
         <div class="col-md-3 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <a href="https://github.com/megcruzen" target="_blank"><i class="fab fa-github text-primary mb-2"></i></a>
+              <i class="fab fa-github text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">GitHub</h4>
               <hr class="my-4">
               <div class="small text-black-50"><a href="https://github.com/wlmathison"
