Updating npm image link

--- a/index.html
+++ b/index.html
@@ -261,11 +261,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-
     </div>
   </section>
 
@@ -360,7 +355,7 @@
             <img src="img/JSON.png" alt="JSON" title="JSON" />
           </div>
           <div>
-            <img src="img/NPM.png" alt="Node Package Manager" title="Node Package Manager" />
+            <img src="img/npm.png" alt="Node Package Manager" title="Node Package Manager" />
             <img src="img/Postman.png" alt="Postman" title="Postman" />
             <img src="img/Browserify.png" alt="Browserify" title="Browserify" />
             <img src="img/Visual Studio Code.png" alt="Visual Studio Code" title="Visual Studio Code" />
