Updating email address

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="mailto:wlmathison.com">wlmathison@gmail.com</a>
+                <a href="mailto:wlmathison@gmail.com">wlmathison@gmail.com</a>
               </div>
             </div>
           </div>
