Add updated resume and 1000Words to website

--- a/index.html
+++ b/index.html
@@ -326,8 +326,39 @@
         </div>
       </div>
 
+      <!-- Project Three Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <div class="text-center h-100 screenshot project">
+            <img class="img-fluid" src="img/1000Words-laptop(2).png" alt="1000Words application">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 screenshot project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Dram</h4>
+                <p class="mb-0 text-white-50">For my back-end capstone at Nashville Software School I created 1000Words.
+                  1000Words is an interactive photo album which allows users to tag their photos with keywords by using
+                  speech-to-text. 1000Words allows users to search through all of their photos quickly using only
+                  keywords or dates, significantly decreasing the amount of time needed to find photos. Built the
+                  application using C#, ASP.Net MVC, Entity Framework, Identity Framework, Recorder.js, and Google Cloud
+                  Speech-to-Text API.
+                </p>
+                <br>
+                <a href="https://github.com/wlmathison/1000Words" target="_blank"><i class="fab fa-github"></i> View on
+                  GitHub</a>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
+
+
 
 
   <!-- Technologies Section -->
