Edit project name. Add ITG as current workplace

--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
         <h4>Work Experience</h4>
         <div class="resume-item">
           <div class="d-flex justify-content-between flex-wrap">
+            <div class="resume-job">APPLICATION DEVELOPER</div>
+            <div class="resume-year">2019</div>
+          </div>
+          <div class="resume-employer">ITG - Tristar Division</div>
+          <!-- <div class="row resume-description">
+            <div class="col-sm-6">
+              <ul>
+                <li></li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul>
+                <li></li>
+              </ul>
+            </div>
+          </div> -->
+        </div>
+        <div class="resume-item">
+          <div class="d-flex justify-content-between flex-wrap">
             <div class="resume-job">FULL-STACK SOFTWARE DEVELOPER</div>
             <div class="resume-year">2019</div>
           </div>
@@ -337,7 +356,7 @@
           <div class="bg-black text-center h-100 screenshot project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Dram</h4>
+                <h4 class="text-white">100Words</h4>
                 <p class="mb-0 text-white-50">For my back-end capstone at Nashville Software School I created 1000Words.
                   1000Words is an interactive photo album which allows users to tag their photos with keywords by using
                   speech-to-text. 1000Words allows users to search through all of their photos quickly using only
