Correcting spelling error. Adding set-value to dev-dependenies in package.json

--- a/index.html
+++ b/index.html
@@ -356,11 +356,11 @@
           <div class="bg-black text-center h-100 screenshot project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">100Words</h4>
+                <h4 class="text-white">1000Words</h4>
                 <p class="mb-0 text-white-50">For my back-end capstone at Nashville Software School I created 1000Words.
-                  1000Words is an interactive photo album which allows users to tag their photos with keywords by using
-                  speech-to-text. 1000Words allows users to search through all of their photos quickly using only
-                  keywords or dates, significantly decreasing the amount of time needed to find photos. Built the
+                  1000Words is an interactive photo album which allows users to talk about their photos and tag them with keywords using
+                  speech-to-text technology. 1000Words allows users to search through all of their photos quickly using only
+                  keywords or dates, significantly decreasing the amount of time needed to find photos. I built the
                   application using C#, ASP.Net MVC, Entity Framework, Identity Framework, Recorder.js, and Google Cloud
                   Speech-to-Text API.
                 </p>
